# BLEEP-V1

./: BUILDING.md  Cargo.toml  PHASE4_ARCHITECTURE.md  PHASE4_DELIVERY.md  PHASE4_FILE_MANIFEST.md  PHASE4_IMPLEMENTATION.md  PHASE4_INDEX.md  PHASE4_QUICK_REFERENCE.md  PHASE4_VISUAL_SUMMARY.md  PHASE5_COMPLETE_ARCHITECTURE.md  PHASE5_DOCUMENTATION_INDEX.md  PHASE5_GOVERNANCE_OPERATIONS.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_QUICK_REFERENCE.md  PHASE5_VERIFICATION.md  README.md
crates/bleep-ai/: Cargo.toml
crates/bleep-ai/src/: ai_assistant.rs  ai_attestation.rs  ai_consensus_integration.rs  ai_constraint_validator.rs  ai_decision.rs  ai_decision_module.rs  ai_feedback_loop.rs  ai_proposal_types.rs  analytics.rs  bleep_connect.rs  compliance.rs  consensus.rs  deterministic_inference.rs  energy_monitor.rs  feature_extractor.rs  governance.rs  governance_integration.rs  interoperability.rs  lib.rs  phase3_tests.rs  phase3_unit_tests.rs  security.rs  sharding.rs  smart_contracts.rs  wallet.rs  zkp_verification.rs
crates/bleep-ai/tests/: phase4_ai_integration_tests.rs
crates/bleep-auth/: Cargo.toml
crates/bleep-auth/src/: audit.rs  audit_store.rs  credentials.rs  errors.rs  identity.rs  lib.rs  rate_limiter.rs  rbac.rs  session.rs  validator_binding.rs
crates/bleep-cli/: Cargo.toml
crates/bleep-cli/src/: cli.rs  lib.rs
crates/bleep-consensus/: Cargo.toml
crates/bleep-consensus/examples/: phase3_syntax_check.rs
crates/bleep-consensus/src/: ai_adaptive_logic.rs  ai_advisory.rs  block_producer.rs  chaos_engine.rs  consensus.rs  engine.rs  epoch.rs  finality.rs  gossip_bridge.rs  incident_detector.rs  integration_tests.rs  lib.rs  mod.rs  networking.rs  orchestrator.rs  pbft_engine.rs  performance_bench.rs  phase1_integration_tests.rs  pos_engine.rs  pow_engine.rs  recovery_controller.rs  safety_invariants.rs  security_audit.rs  self_healing_orchestrator.rs  shard_coordinator.rs  slashing_engine.rs  validator_identity.rs
crates/bleep-consensus/tests/: phase1_integration_test.rs  phase1_proof_of_concept.rs  phase3_self_healing_tests.rs
crates/bleep-core/: Cargo.toml
crates/bleep-core/src/: adversarial_testnet.rs  block.rs  block_validation.rs  blockchain.rs  decision_attestation.rs  decision_verification.rs  invariant_enforcement.rs  lib.rs  mempool.rs  mempool_bridge.rs  merkle_tree.rs  migration_rules.rs  networking.rs  observability.rs  phase5_quick_verification.rs  phase5_upgrade_tests.rs  phase6_adversarial_tests.rs  protocol_invariants.rs  protocol_version.rs  rollback_mechanism.rs  scenario_injector.rs  transaction.rs  transaction_manager.rs  transaction_pool.rs  upgrade_engine.rs
crates/bleep-crypto/: Cargo.toml
crates/bleep-crypto/fuzz/: Cargo.toml
crates/bleep-crypto/src/: anti_asset_loss.rs  bip39.rs  lib.rs  merkle_commitment.rs  merkletree.rs  pq_crypto.rs  pq_crypto_old.rs  quantum_resistance.rs  quantum_secure.rs  tx_signer.rs  zkp_verification.rs
crates/bleep-economics/: Cargo.toml
crates/bleep-economics/src/: distribution.rs  fee_market.rs  game_theory.rs  lib.rs  oracle_bridge.rs  runtime.rs  tokenomics.rs  validator_incentives.rs
crates/bleep-economics/tests/: phase5_integration_tests.rs
crates/bleep-governance/: Cargo.toml
crates/bleep-governance/src/: ai_hooks.rs  ai_reputation.rs  apip.rs  constitution.rs  deterministic_activation.rs  deterministic_executor.rs  forkless_upgrades.rs  governance_binding.rs  governance_core.rs  governance_engine.rs  governance_voting.rs  invariant_monitoring.rs  lib.rs  live_governance.rs  off_chain_voting.rs  phase4_governance_tests.rs  phase5_comprehensive_tests.rs  phase5_integration_tests.rs  proposal_lifecycle.rs  protocol_evolution.rs  protocol_rules.rs  safety_constraints.rs  self_amending.rs  zk_voting.rs
crates/bleep-governance/tests/: phase2_governance_tests.rs
crates/bleep-indexer/: Cargo.toml
crates/bleep-indexer/src/: errors.rs  events.rs  indexes.rs  lib.rs  query.rs  reorg.rs
crates/bleep-interop/: Cargo.toml  layer3_bridge.rs  lib.rs  nullifier_store.rs
crates/bleep-interop/bleep-connect-adapters/: Cargo.toml
crates/bleep-interop/bleep-connect-commitment-chain/: Cargo.toml
crates/bleep-interop/bleep-connect-core/: Cargo.toml
crates/bleep-interop/bleep-connect-crypto/: Cargo.toml
crates/bleep-interop/bleep-connect-executor/: Cargo.toml
crates/bleep-interop/bleep-connect-layer1-social/: Cargo.toml
crates/bleep-interop/bleep-connect-layer2-fullnode/: Cargo.toml
crates/bleep-interop/bleep-connect-layer3-zkproof/: Cargo.toml
crates/bleep-interop/bleep-connect-layer4-instant/: Cargo.toml
crates/bleep-interop/bleep-connect-types/: Cargo.toml
crates/bleep-interop/src/: ai_anomaly.rs  avalanche.rs  bleep_connect.rs  cosmos_sdk.rs  cross_chain.rs  filecoin_rpc.rs  interoperability.rs  lib.rs  liquidity_pool.rs  near_sdk.rs  networking.rs  num_bigint.rs  quantum_secure.rs  starknet.rs  subxt.rs  zkp_verification.rs  zksync.rs
crates/bleep-p2p/: Cargo.toml
crates/bleep-p2p/src/: P2PNode.rs  ai_security.rs  dark_routing.rs  error.rs  gossip_protocol.rs  kademlia_dht.rs  lib.rs  message_protocol.rs  multi_hop_routing.rs  onion_routing.rs  p2p_network.rs  p2p_node.rs  peer_manager.rs  quantum_crypto.rs  types.rs
crates/bleep-pat/: Cargo.toml
crates/bleep-pat/src/: asset_token.rs  lib.rs  pat_engine.rs
crates/bleep-rpc/: Cargo.toml
crates/bleep-rpc/src/: lib.rs  rpc.rs
crates/bleep-scheduler/: Cargo.toml
crates/bleep-scheduler/src/: built_in.rs  errors.rs  lib.rs  metrics.rs  registry.rs  task.rs
crates/bleep-state/: Cargo.toml
crates/bleep-state/src/: advanced_fault_detector.rs  ai.rs  block.rs  consensus.rs  cross_shard_2pc.rs  cross_shard_ai_hooks.rs  cross_shard_locking.rs  cross_shard_recovery.rs  cross_shard_safety_invariants.rs  cross_shard_transaction.rs  crypto.rs  lib.rs  p2p.rs  phase2_full_integration_tests.rs  phase2_integration_tests.rs  phase2_safety_invariants.rs  quantum_secure.rs  (+25 more)
crates/bleep-telemetry/: Cargo.toml
crates/bleep-vm/: Cargo.toml  README.md
crates/bleep-wallet-core/: Cargo.toml
crates/bleep-zkp/: Cargo.toml
(+87 files in other folders)
