[workspace]
resolver = "2"
members = [
    "crates/bleep-ai",
    "crates/bleep-auth",
    "crates/bleep-cli",
    "crates/bleep-consensus",
    "crates/bleep-core",
    "crates/bleep-crypto",
    "crates/bleep-economics",
    "crates/bleep-governance",
    "crates/bleep-indexer",
    "crates/bleep-interop",
    "crates/bleep-interop/bleep-connect-types",
    "crates/bleep-interop/bleep-connect-crypto",
    "crates/bleep-interop/bleep-connect-adapters",
    "crates/bleep-interop/bleep-connect-commitment-chain",
    "crates/bleep-interop/bleep-connect-executor",
    "crates/bleep-interop/bleep-connect-layer1-social",
    "crates/bleep-interop/bleep-connect-layer2-fullnode",
    "crates/bleep-interop/bleep-connect-layer3-zkproof",
    "crates/bleep-interop/bleep-connect-layer4-instant",
    "crates/bleep-interop/bleep-connect-core",
    "crates/bleep-p2p",
    "crates/bleep-pat",
    "crates/bleep-rpc",
    "crates/bleep-scheduler",
    "crates/bleep-state",
    "crates/bleep-telemetry",
    "crates/bleep-vm",
    "crates/bleep-wallet-core",
    "crates/bleep-zkp",
]

[package]
name        = "bleep-root"
version     = "1.0.0"
edition     = "2021"
authors     = ["Muhammad Attahir"]
license     = "MIT OR Apache-2.0"
description = "BLEEP Blockchain — AI-powered, quantum-secure, cross-chain decentralized ecosystem."
repository  = "https://github.com/bleep-project/bleep"

[[bin]]
name = "bleep_admin"
path = "src/bin/bleep_admin.rs"

[[bin]]
name = "bleep"
path = "src/bin/main.rs"

[[bin]]
name = "bleep-executor"
path = "src/bin/executor.rs"

[features]
default  = ["mainnet", "quantum"]
mainnet  = []
testnet  = []
quantum  = ["pqcrypto", "pqcrypto-kyber"]

[dependencies]
bleep-core        = { path = "crates/bleep-core" }
bleep-crypto      = { path = "crates/bleep-crypto" }
bleep-consensus   = { path = "crates/bleep-consensus" }
bleep-scheduler   = { path = "crates/bleep-scheduler" }
bleep-governance  = { path = "crates/bleep-governance" }
bleep-interop     = { path = "crates/bleep-interop" }
bleep-p2p         = { path = "crates/bleep-p2p" }
bleep-pat         = { path = "crates/bleep-pat" }
bleep-rpc         = { path = "crates/bleep-rpc" }
bleep-zkp        = { path = "crates/bleep-zkp" }
bleep-state       = { path = "crates/bleep-state" }
bleep-telemetry   = { path = "crates/bleep-telemetry" }
bleep-vm          = { path = "crates/bleep-vm" }
bleep-wallet-core = { path = "crates/bleep-wallet-core" }
bleep-ai          = { path = "crates/bleep-ai" }
bleep-economics   = { path = "crates/bleep-economics" }

tokio             = { version = "1.36", features = ["full"] }
tokio-stream      = "0.1.15"
tokio-util        = { version = "0.7.10", features = ["codec"] }
async-trait       = "0.1.77"
futures           = "0.3.30"
rayon             = "1.8.1"
parking_lot       = "0.12.1"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
bincode           = "1.3.3"
hex               = "0.4.3"
base64            = "0.21.7"
blake2            = "0.10.6"
sha2              = "0.10.8"
sha3              = "0.10.8"
tiny-keccak       = { version = "2.0.2", features = ["sha3"] }
ed25519-dalek     = "2.1.1"
zeroize           = { version = "1.7.0", features = ["zeroize_derive"] }
aes-gcm           = "0.10.3"
hkdf              = "0.12.4"
halo2_proofs      = "0.3.0"
ark-r1cs-std      = "0.4.0"
libp2p            = "0.53.2"
rocksdb           = { version = "0.21.0", features = ["multi-threaded-cf"] }
dashmap           = "5.5.3"
lru               = "0.12.3"
warp              = "0.3.6"
reqwest           = { version = "0.11.24", features = ["json", "rustls-tls"] }
tempfile          = "3.10"
log               = "0.4.21"
env_logger        = "0.11.2"
tracing           = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror         = "1.0.56"
anyhow            = "1.0.80"
config            = "0.14.0"
clap              = { version = "4.5.1", features = ["derive"] }
chrono            = { version = "0.4.34", features = ["serde"] }
pqcrypto          = { version = "0.18.1", optional = true }
pqcrypto-kyber    = { version = "0.8.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.3"
criterion  = { version = "0.5.1", features = ["html_reports"] }
proptest   = "1.4.0"
mockall    = "0.12.1"
