[package]
name = "bleep-ai"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir"]
description = "BLEEP Unified AI + Self-Healing Quantum-Secure Blockchain Engine"
license = "MIT"

[dependencies]
# --- Core System Dependencies ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.7", features = ["v4", "serde"] }
futures = "0.3"
rayon = "1.8"
dashmap = "5.5"
rand = "0.8"

# --- Cryptography / Hashing ---
sha2 = "0.10"
blake3 = "1.5"
pqcrypto-kyber = "0.7"         # Kyber512 post-quantum
pqcrypto-sphincsplus = "0.7"   # SPHINCS+ post-quantum

# --- AI Inference & ONNX ---
onnxruntime-ng = "1.16.1"

# --- Smart Contract & Blockchain Integration ---
ethers = { version = "2.0", features = ["abigen"] }
web3 = "0.19"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-snark = "0.4.0"
rand_core = "0.6"

# --- REST API Server (Smart Contract Automation) ---
actix-web = "4.5"
actix-rt = "2.9"

linfa = "0.7.1"
linfa-clustering = "0.7.1"
linfa-nn = "0.7.2"
ndarray = "0.15.6"
# --- Optional: Async Test Utilities ---
[dev-dependencies]
tokio = { version = "1.37", features = ["full"] }

