[package]
name        = "bleep-ai"
version     = "0.1.0"
edition     = "2021"
authors     = ["Muhammad Attahir"]
description = "BLEEP Unified AI Advisory Engine"
license     = "MIT"

[dependencies]
# Internal
bleep-core      = { path = "../bleep-core" }
bleep-crypto    = { path = "../bleep-crypto" }
bleep-consensus = { path = "../bleep-consensus" }

# Core system
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
serde_derive  = "1.0"
thiserror     = "1.0"
tokio         = { version = "1.37", features = ["full"] }
log           = "0.4"
env_logger    = "0.11"
uuid          = { version = "1.7", features = ["v4", "serde"] }
futures       = "0.3"
rayon         = "1.8"
dashmap       = "5.5"
rand          = "0.8"
hex           = "0.4"

# Cryptography / hashing
sha2          = "0.10"
sha3          = "0.10"
blake3        = "1.5"
pqcrypto-kyber       = "0.7"
pqcrypto-sphincsplus = "0.7"
bincode       = "1.3"

# ZKP — ark 0.4 consistent with workspace
ark-ff                = "0.4.0"
ark-ec                = "0.4.0"
ark-bls12-381         = "0.4.0"
ark-groth16           = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-r1cs-std          = "0.4.0"
ark-relations         = "0.4.0"
ark-serialize         = "0.4.0"
ark-std               = "0.4.0"
ark-snark             = "0.4.0"
rand_core             = "0.6"

# REST API (used in bleep_connect.rs)
actix-web     = "4.5"
actix-rt      = "2.9"

# ML (pure-Rust; no system library needed)
linfa         = "0.7.1"
linfa-clustering = "0.7.1"
ndarray       = "0.15.6"

# NOTE: Removed for MVP build:
#   onnxruntime-ng — needs ONNX Runtime C library; used only in decision_engine.rs
#                    and machine_learning.rs which are NOT exposed in lib.rs
#   web3           — heavy dep; AI module doesn't need it directly
#   ethers         — same
#   linfa-nn       — brings BLAS dep

[features]
default = []
onnx = []    # future: re-enable onnxruntime-ng under this flag

[dev-dependencies]
tokio = { version = "1.37", features = ["full"] }
