[package]
name = "bleep-auth"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Production-grade authentication and identity layer for BLEEP node operators and dApp developers. Post-quantum credential issuance, JWT session management, role-based access control, validator identity binding, Merkle-chained audit log, and brute-force rate limiting."
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
bincode     = "1.3"

# Error handling
thiserror   = "1.0"
anyhow      = "1.0"

# Async
tokio       = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Cryptography
sha3        = "0.10"
sha2        = "0.10"
hmac        = "0.12"
rand        = "0.8"
zeroize     = { version = "1.7", features = ["zeroize_derive"] }
hex         = "0.4"
base64      = "0.21"
constant_time_eq = "0.3"

# JWT
jsonwebtoken = "9.2"

# Time
chrono      = { version = "0.4", features = ["serde"] }

# Concurrency
dashmap     = "5.5"
parking_lot = "0.12"

# Logging
log         = "0.4"
tracing     = "0.1"

# BLEEP workspace
bleep-crypto = { path = "../bleep-crypto" }

[dev-dependencies]
tokio-test  = "0.4"
proptest    = "1.4"
