[package]
name = "bleep-cli"
version = "1.0.0"
edition = "2021"
authors = ["Muhammad Attahir"]
license = "MIT OR Apache-2.0"
description = "BLEEP Blockchain - AI-powered, quantum-secure, cross-chain decentralized ecosystem."
repository = "https://github.com/bleep-project/bleep"
readme = "README.md"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.80"

# Your internal crates (assumed path or workspace setup)
bleep-core = { path = "../bleep-core" }
bleep-wallet-core = { path = "../bleep-wallet-core" }
bleep-ai = { path = "../bleep-ai" }
bleep-crypto = { path = "../bleep-crypto" }
bleep-pat = { path = "../bleep-pat" }
bleep-state = { path = "../bleep-state" }
bleep-telemetry = { path = "../bleep-telemetry" }
bleep-governance = { path = "../bleep-governance" }

[[bin]]
name = "bleep-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "rpc"
path = "src/bin/rpc.rs"

