[package]
name = "bleep-consensus"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Adaptive, AI-powered, quantum-secure consensus engine for BLEEP blockchain"
license = "MIT OR Apache-2.0"

[dependencies]
# Logging & Utilities
log = "0.4"
tracing = "0.1.40"
env_logger = "0.11"
hex        = "0.4"
serde_json = "1.0"
sha3    = "0.10"
chrono  = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

# Cryptography
ring = "0.17.14"
pqcrypto-sphincsplus = "0.7.1"
pqcrypto-traits = "0.3.5"
bincode = "1.3.3"
parking_lot = "0.12"
tokio = { version = "1.36", features = ["full"] }

# AI & ML
linfa = "0.7.1"                         # AI prediction logic
linfa-nn = "0.7.2"                      # k-Nearest Neighbors
ndarray = "0.15.1"                      # For tensor & array ops

# Networking & State (referenced modules)
bleep-core = { path = "../bleep-core" }
bleep-crypto = { path = "../bleep-crypto" }
bleep-p2p = { path = "../bleep-p2p" }
bleep-vm       = { path = "../bleep-vm" }
bleep-state    = { path = "../bleep-state" }

# Randomness
rand = "0.8.5"

# Error Handling
thiserror = "1.0.39"
anyhow = "1.0.80"
linfa-clustering = "0.7.1"
async-trait = "0.1.77"
futures = "0.3.30"
