[package]
name = "bleep-core"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Core data structures, transaction processing, identity proofing, and anti-loss logic for the BLEEP blockchain ecosystem."
license = "MIT OR Apache-2.0"

[dependencies]
ark-std = "0.4.0"
hex = "0.4.3"
log = "0.4.21"
# Serialization & Encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
sha3 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
# Quantum & Signature (delegated to bleep-crypto)
# Referenced but implemented in bleep-crypto

# Zero-Knowledge Proofs
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["crh", "merkle_tree", "r1cs"] }
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"

# Async & Concurrency
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1.77"
parking_lot = "0.12.1"

# Time & Logging
chrono = { version = "0.4.34", features = ["serde"] }
linfa = "0.7.1"
linfa-clustering = "0.7.1"
pqcrypto = { version = "0.18.1", optional = true }
pqcrypto-kyber = { version = "0.8.0", optional = true }
linfa-nn = "0.7.2"
ndarray = "0.15.6"
bleep-crypto = { path = "../bleep-crypto" }
bleep-p2p = { path = "../bleep-p2p" }

[dev-dependencies]
tokio-test = "0.4.3"
test-log = "0.2.14"
proptest = "1.4.0"

