[package]
name = "bleep-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Cryptographic primitives and post-quantum security modules for the BLEEP blockchain ecosystem."
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

# Cryptographic Hashing
sha3 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
hex = "0.4.3"
ring = "0.17.8" # for SHA3 context hashing

# PQ Cryptography (Falcon + Kyber)
kyber = "0.1.1"

# AEAD Encryption (Kyber + AES Hybrid)
aes-gcm = "0.10.3"
rand = "0.8.5"

ark-ff = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
blake3 = "1.3"  # Modern, fast cryptographic hash

# Merkle Tree (custom or reused)
# if you're using your own implementation, you can skip this
merkle_light = "0.3.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Concurrency
tokio = { version = "1.36", features = ["full"] }
parking_lot = "0.12.1"
rayon = "1.8.1"

# Error Handling
thiserror = "1.0.39"
anyhow = "1.0.80"

# Filesystem I/O
serde_json = "1.0"
serde_yaml = "0.9.31"

# Post-quantum crypto
pqcrypto = "0.18.1"
pqcrypto-kyber = "0.8.1"
pqcrypto-sphincsplus = "0.7.1"
pqcrypto-traits = "0.3.5"
