[package]
name = "bleep-economics"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Economic incentives, tokenomics, and validator economics for BLEEP blockchain."
license = "MIT OR Apache-2.0"

[dependencies]
# --- Core Utilities ---
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.8.5"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0.39"
anyhow = "1.0.80"

# --- Async & Sync Control ---
tokio = { version = "1.36", features = ["full"] }
dashmap = "5.5.3"
parking_lot = "0.12.1"

# --- Cryptography ---
sha2 = "0.10.8"
aes-gcm = "0.10.3"
aes = "0.8.3"

# --- Numeric Precision ---
num-rational = "0.4"
decimal = "0.1"

# --- Standard Library Ext ---
itertools = "0.12"
lazy_static = "1.4"

[dev-dependencies]
approx = "0.5"
