[package]
name = "bleep-governance"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Governance module for BLEEP blockchain."
license = "MIT OR Apache-2.0"
[dependencies]
# --- Core Utilities ---
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.8.5"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0.39"
anyhow = "1.0.80"

# --- Async & Sync Control ---
tokio = { version = "1.36", features = ["full"] }
dashmap = "5.5.3"
parking_lot = "0.12.1"

# --- Cryptography ---
sha2 = "0.10.8"
aes-gcm = "0.10.3"
aes = "0.8.3"
pqcrypto = "0.18.1"
spncsplus = { package = "pqcrypto-sphincsplus", version = "0.7.0" }

# --- Zero-Knowledge Proofs ---
bulletproofs = "4.0.0"
curve25519-dalek = "4.1.1"
zksnarks = { path = "../bleep-zkp" } # adjust if external crate

# --- Machine Learning / AI (Torch Inference) ---
tch = { version = "0.13", features = ["download-libtorch"] }

# --- Distributed Storage ---
ipfs-api-backend-hyper = "0.6.0-alpha.1"
arweave-rs = "0.2.0"

# --- Blockchain Interop ---

# --- Internal BLEEP Modules ---
bleep-core = { path = "../bleep-core" }
bleep-crypto = { path = "../bleep-crypto" }
bleep-state = { path = "../bleep-state" }
bleep-interop = { path = "../bleep-interop" }
bleep-ai = { path = "../bleep-ai" }
