[package]
name = "bleep-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Production-grade chain indexer for BLEEP. Ingests block/tx/governance/validator/shard/cross-shard/AI events via an async channel and builds DashMap-backed queryable indexes. Includes reorg rollback, periodic checkpointing, and chain-wide statistics."
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
bincode     = "1.3"

# Error handling
thiserror   = "1.0"
anyhow      = "1.0"

# Async
tokio       = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures     = "0.3"
tokio-stream = "0.1"

# Concurrency
dashmap     = "5.5"
parking_lot = "0.12"

# Hashing
sha3        = "0.10"
hex         = "0.4"

# Time
chrono      = { version = "0.4", features = ["serde"] }

# Logging
log         = "0.4"
tracing     = "0.1"

[dev-dependencies]
tokio-test  = "0.4"
