[package]
name = "bleep-interop"
version = "1.0.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "BLEEP Connect: Cross-Chain Interoperability Engine with Quantum Security and ZKP"
repository = "https://github.com/bleep-project/bleep"

[dependencies]
# Async and Concurrency
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing & Cryptography
sha2 = "0.10"
blake2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
ed25519-dalek = "2.1"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Ethereum
ethers = { version = "2.0.7", features = ["abigen"] }


# Polkadot/Substrate

# Cosmos SDK (placeholder, implement if you have bindings)


# Sui
sui-sdk = "0.0.0"


# Bitcoin
bitcoin = "0.30"

# AI / ML - Anomaly Detection
linfa = "0.7.1"
linfa-clustering = "0.7.1"
ndarray = "0.15.1"

# ZKP with Arkworks
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.0"
ark-relations = "0.4.0"
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-crypto-primitives = "0.4.0"

# Logging & Errors
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

# Utilities
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "5.5"


