[package]
name = "bleep-p2p"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "BLEEP P2P networking module — production-grade quantum-safe networking with Kademlia DHT, onion routing, and AI peer scoring"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
async-trait = "0.1.77"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
hex = "0.4.3"
base64 = "0.22"
bytes = "1.5"
sha2 = "0.10.8"
sha3 = "0.10.8"
blake2 = "0.10.6"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
subtle = "2.5"
pqcrypto-kyber = "0.8.0"
pqcrypto-sphincsplus = "0.7.0"
pqcrypto-traits = "0.3.5"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dashmap = "5.5.3"
lru = "0.12.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }
tracing-test = "0.2"
tempfile = "3"
