[package]
name = "bleep-pat"
version = "1.0.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "BLEEP Programmable Asset Token (PAT) and Wallet Module"
license = "MIT OR Apache-2.0"

[dependencies]
# FRAME + Substrate
frame-support = { version = "32.0.0", default-features = false }
frame-system = { version = "32.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# ink! smart contract framework
ink = { version = "4.3.0", default-features = false }
ink_env = "4.3.0"
ink_primitives = "4.3.0"
ink_storage = { version = "4.3.0", default-features = false }

# Cryptography
aes-gcm = "0.10.3"
rand = "0.8.5"
sha2 = "0.10.8"
blake2 = "0.10.6"
ed25519-dalek = "2.1.1"
base64 = "0.21.7"
hex = "0.4.3"

# ZKP + Quantum
ark-groth16 = "0.4.0"
ark-ff = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-crypto-primitives = "0.4.0"
pqcrypto = "0.18.1"
pqcrypto-falcon = "0.4.0"
pqcrypto-kyber = "0.8.0"

# AI/ML
tch = { version = "0.13", features = ["download-libtorch"] }

# Async & Logging
tokio = { version = "1.36", features = ["full"] }
log = "0.4.21"
thiserror = "1.0.39"
anyhow = "1.0.80"

# State and Interop
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# Testing & Dev
[dev-dependencies]
ink_e2e = "4.3.0"
proptest = "1.4.0"
mockall = "0.12.1"
test-log = "0.2.14"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "ink/std",
    "ink_storage/std",
    "ink_env/std",
    "ink_primitives/std"
]


