[package]
name        = "bleep-pat"
version     = "1.0.0"
edition     = "2021"
authors     = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "BLEEP Programmable Asset Token (PAT)"
license     = "MIT OR Apache-2.0"

[dependencies]
# Cryptography
aes-gcm      = "0.10.3"
rand         = "0.8.5"
sha2         = "0.10.8"
blake2       = "0.10.6"
ed25519-dalek = "2.1.1"
base64       = "0.21.7"
hex          = "0.4.3"
tracing      = "0.1.40"

# Async & logging
tokio        = { version = "1.36", features = ["full"] }
log          = "0.4.21"
thiserror    = "1.0.39"
anyhow       = "1.0.80"

# State & serialisation
dashmap      = "5.5.3"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
bincode      = "1.3.3"

# NOTE: Removed from MVP build:
#   tch            — LibTorch; used only in ai_automation.rs (not in lib.rs)
#   frame-support  — Substrate FRAME; used only in pat_core.rs (not in lib.rs)
#   ink            — ink! smart contracts; not in lib.rs
#   ark-*          — ZKP; deferred to sprint 3
#   pqcrypto-falcon — brings clang dep; deferred

[features]
default = []
substrate = []   # future: enables frame-support / ink modules
ml        = []   # future: enables tch/ai_automation
